--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	    	<!-- The mouse pointers will be created here -->
 		</div>
 
-		<canvas id="paper" width="1900" height="1000">
+		<canvas id="paper" width="1900" height="1080">
 			Your browser needs to support canvas for this to work!
 		</canvas>
 		
@@ -26,12 +26,11 @@
 			<h2>You will see everyone else who's doing the same.</h2>
 			<h3>Tip: if the stage gets dirty, simply reload the page</h3>
 		</hgroup>
-		
-        <footer>
-	        <h2><i>Source Code:</i> <a href="https://github.com/DulceBellumInexpertis/NodeDrawingGame" target='_blank'>Node.js Multiplayer Drawing Game</a></h2>
-            <p class='tzine' id='onlineCounter' href=''>Players connected: 0</p>
-        </footer>
-        
+
+		<colorpicker id="colorpicker">
+			<!--<div class="color" style="background-color: #000;" data-color="000000"></div>-->
+		</colorpicker>
+
         <!-- JavaScript includes. Notice that socket.io.js is served by node.js -->
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
