--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
 		<colorpicker id="colorpicker">
 			<!--<div class="color" style="background-color: #000;" data-color="000000"></div>-->
+			<div class="line width-plus">+</div>
+			<div class="line width-minus">-</div>
+			<div class="line" id="currentwidth">10</div>
 		</colorpicker>
 
         <!-- JavaScript includes. Notice that socket.io.js is served by node.js -->
